syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

package ds_k8s_namespace;

message DsK8sNamespaceBean{

     int32 id=1 ;
     optional int32  limits_memory=2 ;
     optional string  namespace= 3;
     optional int32  online_job_num=4 ;
     optional int32  user_id= 5;
     optional int32  pod_replicas=6 ;
     optional string   pod_request_cpu=7 ;
     optional int32  pod_request_memory= 8;
     optional string  limits_cpu=9 ;
     optional string  k8s=10 ;
     optional string  create_time=11 ;
     optional string  update_time=12 ;
}


// Generated according to https://cloud.google.com/apis/design/standard_methods
service DsK8sNamespaceBeanService {
  rpc ListDsK8sNamespaceBeans(ListDsK8sNamespaceBeansRequest) returns (ListDsK8sNamespaceBeansResponse) {
    option (google.api.http) = {
      get: "/v1alpha1/DsK8sNamespaceBeans"
    };
  }

  rpc GetDsK8sNamespaceBean(GetDsK8sNamespaceBeanRequest) returns (DsK8sNamespaceBean) {
    option (google.api.http) = {
      get: "/v1alpha1/{name=DsK8sNamespaceBeans/*}"
    };
  }

  rpc CreateDsK8sNamespaceBean(CreateDsK8sNamespaceBeanRequest) returns (DsK8sNamespaceBean) {
    option (google.api.http) = {
      post: "/v1alpha1/DsK8sNamespaceBeans"
      body: "DsK8sNamespaceBean"
    };
  }

  rpc UpdateDsK8sNamespaceBean(UpdateDsK8sNamespaceBeanRequest) returns (DsK8sNamespaceBean) {
    option (google.api.http) = {
      patch: "/v1alpha1/{DsK8sNamespaceBean.name=DsK8sNamespaceBeans/*}"
      body: "DsK8sNamespaceBean"
    };
  }

  rpc DeleteDsK8sNamespaceBean(DeleteDsK8sNamespaceBeanRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1alpha1/{name=DsK8sNamespaceBeans/*}"
    };
  }
}

// message DsK8sNamespaceBean {
// ! This should be defined elsewhere
// }

message ListDsK8sNamespaceBeansRequest {


  // The maximum number of items to return.
  int32 page_size = 1;

 int32 page_num = 2;
}

message ListDsK8sNamespaceBeansResponse {
  // The field name should match the noun "DsK8sNamespaceBean" in the method name.
  // There will be a maximum number of items returned based on the page_size field in the request.
  repeated DsK8sNamespaceBean DsK8sNamespaceBeans = 1;

  // Token to retrieve the next page of results, or empty if there are no more results in the list.
  string next_page_token = 2;
}

message GetDsK8sNamespaceBeanRequest {
  // The field will contain name of the resource requested.
  string name = 1;
}

message CreateDsK8sNamespaceBeanRequest {
  // The parent resource name where the DsK8sNamespaceBean is to be created.
  string parent = 1;

  // The DsK8sNamespaceBean id to use for this DsK8sNamespaceBean.
  string DsK8sNamespaceBean_id = 2;

  // The DsK8sNamespaceBean resource to create.
  // The field name should match the Noun in the method name.
  DsK8sNamespaceBean DsK8sNamespaceBean = 3;
}

message UpdateDsK8sNamespaceBeanRequest {
  // The DsK8sNamespaceBean resource which replaces the resource on the server.
  DsK8sNamespaceBean DsK8sNamespaceBean = 1;

  // The update mask applies to the resource. For the `google.protobuf.FieldMask` definition,
  // see https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#google.protobuf.FieldMask
  google.protobuf.FieldMask update_mask = 2;
}

message DeleteDsK8sNamespaceBeanRequest {
  // The resource name of the DsK8sNamespaceBean to be deleted.
  string name = 1;
}
